# Chromium-Android

./: .gitignore  .travis.yml  README.md  build.gradle  chrome.jks.enc  gradle.properties  settings.gradle  sync_chromium.sh
Chromium/: args.gn  sync_chromium.sh
app/: .gitignore  build.gradle  proguard-rules.pro
app/libs/: core-1.3.7.aar
autofill_assistant/: build.gradle
base_res/color/: checkbox_tint.xml
base_res/drawable/: contextual_suggestions_placeholder_thumbnail.xml  data_reduction_big.xml  ic_book_round.xml  ic_keyboard.xml  ic_loop_round.xml  ic_snippet_thumbnail_placeholder.xml  ic_swap_vert_round.xml  ic_wb_sunny_round.xml  logo_partly_cloudy_light.xml  logo_translate_round.xml  modern_toolbar_background_white.xml  tabular_context_menu_image_border.xml
base_res/drawable-sw600dp/: bg_white_dialog.xml
base_res/layout/: accept_languages_item.xml  account_chooser_dialog_item.xml  account_chooser_dialog_title.xml  autofill_billing_address_dropdown.xml  autofill_card_unmask_prompt.xml  autofill_name_fixflow.xml  bookmark_add_edit_folder_activity.xml  bottom_toolbar_browsing.xml  clear_browsing_data_tab_content.xml  clear_storage.xml  confirm_import_sync_data.xml  fre_tosanduma.xml  (+65 more)
base_res/layout-sw360dp/: preference_spinner_single_line.xml
base_res/layout-sw600dp/: location_bar.xml
content/: build.gradle
customtabs/: build.gradle
data_chart/: build.gradle
download/: build.gradle
feed/: build.gradle
gradle/: android-lint.gradle
media/: build.gradle
splash/: build.gradle
tools/: args.gn  clean.sh  sync_chromium.sh
ui/: build.gradle
(+4988 files in other folders)
