target_os = "android"
is_debug = false
is_official_build = true
enable_remoting = true
is_component_build = false
is_chrome_branded = false
use_official_google_api_keys = false
enable_resource_whitelist_generation = true
enable_nacl = false
remove_webcore_debug_symbols = true
proprietary_codecs = true
ffmpeg_branding = "Chrome"
android_channel = "stable"
